force-app/main/default/objects/User/fields/Dashboard_Pal__Default_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Pal__Default_Dashboard__c</fullName>
    <label>Default Dashboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>