force-app/main/default/objects/User/fields/ses6__Development_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>ses6__Development_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Snippet can be shared with the User via email directly from Snippets</inlineHelpText>
    <label>Development Team Member</label>
    <type>Checkbox</type>
</CustomField>