force-app/main/default/objects/User/fields/ses6__SES_Setup_Menu_Administrator__c.field-meta.xml
<CustomField>
    <fullName>ses6__SES_Setup_Menu_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the SES Setup Menu for the User</inlineHelpText>
    <label>SES Setup Menu Administrator</label>
    <type>Checkbox</type>
</CustomField>